@@ -1,20 +1,95 @@
-name := "Play2 Template Parser"
+lazy val twirl = project
+  .in(file("."))
+  .aggregate(api, parser, compiler)
+  .settings(common: _*)
+  .settings(crossScala: _*)
+  .settings(noPublish: _*)
 
-crossScalaVersions := Seq("2.9.3", "2.10.2")
+lazy val api = project
+  .in(file("api"))
+  .settings(common: _*)
+  .settings(crossScala: _*)
+  .settings(
+    name := "twirl-api",
+    libraryDependencies += commonsLang
+  )
 
-scalacOptions := Seq("-unchecked", "-deprecation", "-encoding", "utf8")
+lazy val parser = project
+  .in(file("parser"))
+  .settings(common: _*)
+  .settings(crossScala: _*)
+  .settings(
+    name := "twirl-parser",
+    libraryDependencies += specs2(scalaBinaryVersion.value),
+    libraryDependencies += scalaIO(scalaBinaryVersion.value) % "test"
+  )
 
-// specs2 resolvers
-resolvers ++= Seq("snapshots" at "http://oss.sonatype.org/content/repositories/snapshots",
-                  "releases"  at "http://oss.sonatype.org/content/repositories/releases")
+lazy val compiler = project
+  .in(file("compiler"))
+  .dependsOn(api, parser % "compile;test->test")
+  .settings(common: _*)
+  .settings(crossScala: _*)
+  .settings(
+    name := "twirl-compiler",
+    libraryDependencies += scalaCompiler(scalaVersion.value),
+    libraryDependencies += scalaIO(scalaBinaryVersion.value)
+  )
 
-// specs2 dependency
-libraryDependencies <+= scalaVersion {
-  case "2.9.3" => "org.specs2" %% "specs2" % "1.12.4.1" % "test"
-  case "2.10.1" | "2.10.2" => "org.specs2" %% "specs2" % "2.1.1" % "test"
+lazy val plugin = project
+  .in(file("sbt-twirl"))
+  .dependsOn(compiler)
+  .settings(common: _*)
+  .settings(scriptedSettings: _*)
+  .settings(
+    name := "sbt-twirl",
+    organization := "com.typesafe.sbt",
+    sbtPlugin := true,
+    scriptedLaunchOpts += ("-Dproject.version=" + version.value),
+    scriptedLaunchOpts += "-XX:MaxPermSize=256m",
+    resourceGenerators in Compile <+= generateVersionFile
+  )
+
+// Shared settings
+
+def common = Seq(
+  organization := "com.typesafe.twirl",
+  version := "1.0-SNAPSHOT",
+  scalaVersion := "2.10.4",
+  scalacOptions := Seq("-unchecked", "-deprecation", "-encoding", "utf8")
+)
+
+def crossScala = Seq(
+  crossScalaVersions := Seq("2.9.3", "2.10.4"),
+  unmanagedSourceDirectories in Compile += (sourceDirectory in Compile).value / ("scala-" + scalaBinaryVersion.value)
+)
+
+def noPublish = Seq(
+  publish := {},
+  publishLocal := {}
+)
+
+// Version file
+
+def generateVersionFile = Def.task {
+  val version = (Keys.version in api).value
+  val file = (resourceManaged in Compile).value / "twirl.version.properties"
+  val content = s"twirl.api.version=$version"
+  IO.write(file, content)
+  Seq(file)
 }
 
-// scala-library dependency
-libraryDependencies <+= scalaVersion {
-  case version => "org.scala-lang" % "scala-library" % version
+// Dependencies
+
+def commonsLang = "org.apache.commons" % "commons-lang3" % "3.1"
+
+def scalaCompiler(version: String) = "org.scala-lang" % "scala-compiler" % version
+
+def scalaIO(scalaVersion: String) = scalaVersion match {
+  case "2.9.3" => "com.github.scala-incubator.io" % "scala-io-file_2.9.2"  % "0.4.1-seq"
+  case "2.10" => "com.github.scala-incubator.io" %% "scala-io-file"  % "0.4.2"
+}
+
+def specs2(scalaBinaryVersion: String) = scalaBinaryVersion match {
+  case "2.9.3" => "org.specs2" %% "specs2" % "1.12.4.1" % "test"
+  case "2.10"  => "org.specs2" %% "specs2" % "2.3.10" % "test"
 }
